# programmiersprachen-aufgabenblatt-2

source/: CMakeLists.txt  Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  aufgabe_11.cpp  aufgabe_2_3.cpp  aufgabe_6.cpp  aufgabe_9.cpp  circle.cpp  circle.hpp  clock_main.cpp  color.hpp  example.cpp  mat2.cpp  mat2.hpp  name_highlight_main.cpp  rectangle.cpp  rectangle.hpp  tests.cpp  vec2.cpp  vec2.hpp
